fix: fix centering on li on mobile size

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3547,7 +3547,7 @@ input, select, textarea {
 				-webkit-flex-direction: column-reverse;
 				-ms-flex-direction: column-reverse;
 				flex-direction: column-reverse;
-				text-align: center;
+				
 			}
 
 				.banner.style1 .content {
